<resources>
    <string name="app_name">Client</string>
    <string name="title_repos">Репозитории</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_repo_github">Github</string>
    <string name="repo_description">Описание репозитория:</string>
    <string name="progrmming_languages">Языки програмиирования:</string>
    <string name="last_commits">Последние коммиты:</string>
    <string name="repo_name">Название репозитория</string>
    <string name="author">Автор</string>
    <string name="org">Организация</string>
    <string name="author_or_org">Автор или организация</string>
    <string name="unknown">Unknown</string>
    <string name="app_title">Client Github</string>
</resources>