<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_repos">

    <fragment
        android:id="@+id/navigation_repos"
        android:name="com.example.client.ui.repos.ReposFragment"
        android:label="@string/title_repos"
        tools:layout="@layout/fragment_repos" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.client.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.client.ui.githubrepo.GithubRepoFragment"
        android:label="@string/title_repo_github"
        tools:layout="@layout/fragment_github_repo" />
</navigation>