<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/default_margin"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                tools:text="Anokinau" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivAuthor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:src="@drawable/ic_baseline_info_24" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:layout_toRightOf="@id/ivAuthor"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    tools:text="Michael David Boy" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/repo_description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                tools:text="Merb Core: All you need. None you don't." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="10dp"
                android:text="@string/progrmming_languages"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                tools:text="Ruby | Java " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/rlForkCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/ivForkCountStat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="FORK"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvForkCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ivForkCountStat"
                        android:layout_centerHorizontal="true"
                        android:text="54" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/ivStarsCountStat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="STAR"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvStarsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ivStarsCountStat"
                        android:layout_centerHorizontal="true"
                        android:text="4" />
                </RelativeLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="10dp"
                android:text="@string/last_commits"
                android:textColor="@color/black" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCommit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                tools:listitem="@layout/row_commit" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pvDetailLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:progressDrawable="@drawable/progress_bar"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/ivDetailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_error_outline_24"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>



